syntax = "proto3";

package hello;

service MyService {
  rpc Hello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string salute = 1;
}
